Added activity recognition client modules

--- a/DeedsBeeActivityChallenge/app/src/main/AndroidManifest.xml
+++ b/DeedsBeeActivityChallenge/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.deedsbeeactivitychallenge">
 
+
+
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".ActivityIntentService"
+            android:exported="false" />
+        <service
+            android:name=".ui.main.BackgroundDetectedActivitiesService"
+            android:exported="false" />
         <activity android:name=".ui.main.LaunchActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
