Added more robust way to decrease points from the user

--- a/DeedsBeeActivityChallenge/app/src/main/AndroidManifest.xml
+++ b/DeedsBeeActivityChallenge/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
             android:name=".ActivityIntentService"
             android:exported="false" />
         <service
-            android:name=".ui.main.BackgroundDetectedActivitiesService"
-            android:exported="false" />
+            android:name=".ui.main.BackgroundDetectedActivitiesService"/>
         <activity android:name=".ui.main.LaunchActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
